{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 295,
  "lineage": "0121fec3-da40-c822-2dd4-a3bfbd640f56",
  "resources": [
    {
      "module": "module.compute_layer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-022062aacfecac5bd",
            "arn": "arn:aws:ec2:ap-south-2:949474133081:instance/i-05f39e503fb4741d3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f39e503fb4741d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "travel-platform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-062dda8dd8a6abd31"
              }
            ],
            "primary_network_interface_id": "eni-062dda8dd8a6abd31",
            "private_dns": "ip-10-0-2-196.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.196",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4f0392815ee4028",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071ab93e06b767eea",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d2813d42f166080"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "i-05f39e503fb4741d3",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.compute_layer.data.aws_ami.amazon_linux",
            "module.network_layer.aws_subnet.private_subnet_1",
            "module.network_layer.aws_vpc.travel_platform_vpc",
            "module.security_layer.aws_security_group.app_sg",
            "module.security_layer.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_layer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-022062aacfecac5bd",
            "arn": "arn:aws:ec2:ap-south-2:949474133081:instance/i-06463116719944cd9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06463116719944cd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "travel-platform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-063db189fd11267c0"
              }
            ],
            "primary_network_interface_id": "eni-063db189fd11267c0",
            "private_dns": "ip-10-0-1-105.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_ip": "18.60.129.52",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b24231a1430c9897",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d9b9689625e49ff",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e14b614be45cf125"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "i-06463116719944cd9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.compute_layer.data.aws_ami.amazon_linux",
            "module.network_layer.aws_subnet.public_subnet",
            "module.network_layer.aws_vpc.travel_platform_vpc",
            "module.security_layer.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:internet-gateway/igw-05aedbbc156f6a1a9",
            "id": "igw-05aedbbc156f6a1a9",
            "owner_id": "949474133081",
            "region": "ap-south-2",
            "tags": {
              "Name": "travel-platform-igw"
            },
            "tags_all": {
              "Name": "travel-platform-igw"
            },
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:route-table/rtb-01f73a104f29986e9",
            "id": "rtb-01f73a104f29986e9",
            "owner_id": "949474133081",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "rtb-01f73a104f29986e9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:route-table/rtb-05b01f9b66eeda940",
            "id": "rtb-05b01f9b66eeda940",
            "owner_id": "949474133081",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05aedbbc156f6a1a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "rtb-05b01f9b66eeda940",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_internet_gateway.main_igw",
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df54789cfd3dab6a",
            "region": "ap-south-2",
            "route_table_id": "rtb-01f73a104f29986e9",
            "subnet_id": "subnet-071ab93e06b767eea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_layer.aws_route_table.private_rt",
            "module.network_layer.aws_subnet.private_subnet_1",
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01624579ae002f7ea",
            "region": "ap-south-2",
            "route_table_id": "rtb-01f73a104f29986e9",
            "subnet_id": "subnet-027dcb7860d06b371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_layer.aws_route_table.private_rt",
            "module.network_layer.aws_subnet.private_subnet_2",
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0213bf0073109abdf",
            "region": "ap-south-2",
            "route_table_id": "rtb-05b01f9b66eeda940",
            "subnet_id": "subnet-02d9b9689625e49ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_layer.aws_internet_gateway.main_igw",
            "module.network_layer.aws_route_table.public_rt",
            "module.network_layer.aws_subnet.public_subnet",
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:subnet/subnet-071ab93e06b767eea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ab93e06b767eea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949474133081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "subnet-071ab93e06b767eea",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:subnet/subnet-027dcb7860d06b371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027dcb7860d06b371",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949474133081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "subnet-027dcb7860d06b371",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:subnet/subnet-02d9b9689625e49ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d9b9689625e49ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949474133081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "subnet-02d9b9689625e49ff",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_layer",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "travel_platform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:vpc/vpc-03bb2d8b7cd822ecd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc2815731d9b50e9",
            "default_route_table_id": "rtb-035808bb83bb39405",
            "default_security_group_id": "sg-000bfe4eb89adeba6",
            "dhcp_options_id": "dopt-08732c3174c2a65d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03bb2d8b7cd822ecd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035808bb83bb39405",
            "owner_id": "949474133081",
            "region": "ap-south-2",
            "tags": {
              "Environment": "learning",
              "Name": "travel-platform-vpc"
            },
            "tags_all": {
              "Environment": "learning",
              "Name": "travel-platform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "vpc-03bb2d8b7cd822ecd",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "module": "module.security_layer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:security-group/sg-08d2813d42f166080",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d2813d42f166080",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "App port from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH only from Bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e14b614be45cf125"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "949474133081",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "sg-08d2813d42f166080",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc",
            "module.security_layer.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_layer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:security-group/sg-0e14b614be45cf125",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e14b614be45cf125",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "949474133081",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "sg-0e14b614be45cf125",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_layer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:949474133081:security-group/sg-063e71d3ede508a01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063e71d3ede508a01",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from app SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d2813d42f166080"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "949474133081",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb2d8b7cd822ecd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "949474133081",
            "id": "sg-063e71d3ede508a01",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.network_layer.aws_vpc.travel_platform_vpc",
            "module.security_layer.aws_security_group.app_sg",
            "module.security_layer.aws_security_group.bastion_sg"
          ]
        }
      ]
    }
  ]
}